# myQtTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
